--- a/q/49781.html
+++ b/q/49781.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Uiua</td><td>240408T143910Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272414#272414">noodle m</a></td></tr>
+<tr d-ix="0"><td>035</td><td>Uiua</td><td>240408T143910Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272414#272414">noodle m</a></td></tr>
 <tr d-ix="1"><td>020</td><td>Vyxal</td><td>240406T003524Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/272371#272371">emanresu</a></td></tr>
 <tr d-ix="2"><td>080</td><td>Haskell</td><td>210621T152620Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/230214#230214">Lynn</a></td></tr>
 <tr d-ix="3"><td>025</td><td>Japt</td><td>190125T231554Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/179124#179124">Shaggy</a></td></tr>
@@ -68,69 +68,56 @@
 <tr d-ix="39"><td>038</td><td>CJam</td><td>150507T212327Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/49784#49784">Optimize</a></td></tr>
 <tr d-ix="40"><td>052</td><td>Pyth</td><td>150507T211009Z</td><td><a href="https://codegolf.stackexchange.com/questions/49781/extendify-the-ascii-sun/49782#49782">Maltysen</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua, <s>46</s> <s>44</s> <s>42</s> <s>40</s> <s>39</s> 38 bytes</h1>
+<div id="pu0" class="pu"><h1>Uiua, <s>46</s> <s>44</s> <s>42</s> <s>40</s> <s>39</s> <s>38</s> 35 bytes</h1>
 <p><sup><a href="https://codegolf.stackexchange.com/a/256052/108687">crossed out 44 is still regular 44 :(</a></sup></p>
-<pre><code>⊏↧5/◇+×+1⇡4{⇌.⊞=.⊙⟜¤⟜=}⇡+1×2.:$  /\-|O
+<pre><code>⊏↧5/◇+\+{⇌.⊞=.⊙⟜¤⟜=}⇡+1×2.:$  |-\/O
 </code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_2__RiDihpAg4oqP4oanNS_il4crw5crMeKHoTR74oeMLuKKnj0u4oqZ4p-cwqTin5w9feKHoSsxw5cyLjokICAvXC18TwoK4omhKCZwIiLiiKniiaEmcEYuKeKHoTUK" rel="nofollow noreferrer">Try it!</a> I submitted this on the day of the 2024 solar eclipse, which is fitting for a challenge about the sun. (Edit - the eclipse was beautiful! I saw it at around 85%-90% coverage)</p>
-<p>At one point this borrowed some logic from <a href="https://codegolf.stackexchange.com/a/49785/108687">randomra’s very clever J solution</a>, but I found a shorter solution using a different method.</p>
-<p>Outdated explanation:</p>
-<p>Consider the input 3. We double this and add 1 to get the side length 7.</p>
-<p>From this we start with the identity matrix, and a reversed copy:</p>
-<pre><code>0 0 0 0 0 0 1    1 0 0 0 0 0 0
-0 0 0 0 0 1 0    0 1 0 0 0 0 0
-0 0 0 0 1 0 0    0 0 1 0 0 0 0
-0 0 0 1 0 0 0    0 0 0 1 0 0 0
-0 0 1 0 0 0 0    0 0 0 0 1 0 0
-0 1 0 0 0 0 0    0 0 0 0 0 1 0
-1 0 0 0 0 0 0    0 0 0 0 0 0 1
+<p><a href="https://uiua.org/pad?src=0_10_2__RiDihpAg4oqP4oanNS_il4crXCt74oeMLuKKnj0u4oqZ4p-cwqTin5w9feKHoSsxw5cyLjokICB8LVwvTwoK4omhKCZwIiLiiaEmcEYmcC4p4oehNAo=" rel="nofollow noreferrer">Try it!</a> I submitted this on the day of the 2024 solar eclipse, which is fitting for a challenge about the sun. (Edit - the eclipse was beautiful! I saw it at around 85%-90% coverage)</p>
+<p>Certainly my most well-golfed Uiua submission to-date. I have had a lot of different ideas and methods to save bytes and frequently switched much of the approach around a lot, but finally I have this at a state where I'd be happy if I don't find anything more.</p>
+<p>Omnikar's very clever idea in the Uiua discord to use <code>/+\+</code> instead of multiplying each term by a different factor helped me save 3 bytes! 38 → 35</p>
+<p>Explanation:</p>
+<p>Consider the input 3. We double this and add 1 to get the side length 7, and take the range from 0 up to it.</p>
+<pre><code>[0 1 2 3 4 5 6]
 </code></pre>
-<p>Also make the array of this many zeros with a 1 at the position of the original input:</p>
-<pre><code>0 0 0 1 0 0 0
+<p>Underneath this we push a copy with a mask of where the original input appears, and a &quot;fixed&quot; (wrapped in an array) copy of that.</p>
+<pre><code>[0 0 0 1 0 0 0]    [[0 0 0 1 0 0 0]]    [0 1 2 3 4 5 6]
 </code></pre>
-<p>Create a square matrix of this, and a transposed copy:</p>
-<pre><code>0 0 0 0 0 0 0    0 0 0 1 0 0 0
-0 0 0 0 0 0 0    0 0 0 1 0 0 0
-0 0 0 0 0 0 0    0 0 0 1 0 0 0
-1 1 1 1 1 1 1    0 0 0 1 0 0 0
-0 0 0 0 0 0 0    0 0 0 1 0 0 0
-0 0 0 0 0 0 0    0 0 0 1 0 0 0
-0 0 0 0 0 0 0    0 0 0 1 0 0 0
+<p>Using the range at the top of the stack, push the identity matrix and a reversed copy.</p>
+<pre><code>                                        [[1 0 0 0 0 0 0]   [[0 0 0 0 0 0 1]
+                                         [0 1 0 0 0 0 0]    [0 0 0 0 0 1 0]
+                                         [0 0 1 0 0 0 0]    [0 0 0 0 1 0 0]
+[0 0 0 1 0 0 0]    [[0 0 0 1 0 0 0]]     [0 0 0 1 0 0 0]    [0 0 0 1 0 0 0]
+                                         [0 0 0 0 1 0 0]    [0 0 1 0 0 0 0]
+                                         [0 0 0 0 0 1 0]    [0 1 0 0 0 0 0]
+                                         [0 0 0 0 0 0 1]]   [1 0 0 0 0 0 0]]
 </code></pre>
-<p>Then we take these 4 matrices in an array and multiply them by 1, 2, 3, and 4 respectively:</p>
-<pre><code>0 0 0 1 0 0 0   0 0 0 0 0 0 0
-0 0 0 1 0 0 0   0 0 0 0 0 0 0
-0 0 0 1 0 0 0   0 0 0 0 0 0 0
-0 0 0 1 0 0 0   2 2 2 2 2 2 2
-0 0 0 1 0 0 0   0 0 0 0 0 0 0
-0 0 0 1 0 0 0   0 0 0 0 0 0 0
-0 0 0 1 0 0 0   0 0 0 0 0 0 0
-
-3 0 0 0 0 0 0   0 0 0 0 0 0 4
-0 3 0 0 0 0 0   0 0 0 0 0 4 0
-0 0 3 0 0 0 0   0 0 0 0 4 0 0
-0 0 0 3 0 0 0   0 0 0 4 0 0 0
-0 0 0 0 3 0 0   0 0 4 0 0 0 0
-0 0 0 0 0 3 0   0 4 0 0 0 0 0
-0 0 0 0 0 0 3   4 0 0 0 0 0 0
+<p>Take their cumulative sums:</p>
+<pre><code>[[0 0 0 0 0 0 1]   [[1 0 0 0 0 0 1]   [[1 0 0 0 0 0 1]   [[1 0 0 1 0 0 1]
+ [0 0 0 0 0 1 0]    [0 1 0 0 0 1 0]    [0 1 0 0 0 1 0]    [0 1 0 1 0 1 0]
+ [0 0 0 0 1 0 0]    [0 0 1 0 1 0 0]    [0 0 1 0 1 0 0]    [0 0 1 1 1 0 0]
+ [0 0 0 1 0 0 0]    [0 0 0 2 0 0 0]    [1 1 1 3 1 1 1]    [1 1 1 4 1 1 1]
+ [0 0 1 0 0 0 0]    [0 0 1 0 1 0 0]    [0 0 1 0 1 0 0]    [0 0 1 1 1 0 0]
+ [0 1 0 0 0 0 0]    [0 1 0 0 0 1 0]    [0 1 0 0 0 1 0]    [0 1 0 1 0 1 0]
+ [1 0 0 0 0 0 0]]   [1 0 0 0 0 0 1]]   [1 0 0 0 0 0 1]]   [1 0 0 1 0 0 1]]
 </code></pre>
-<p>Sum them all together:</p>
-<pre><code>3 0 0  1 0 0 4  
-0 3 0  1 0 4 0  
-0 0 3  1 4 0 0  
-2 2 2 10 2 2 2 
-0 0 4  1 3 0 0  
-0 4 0  1 0 3 0
-4 0 0  1 0 0 3
+<p>Notice that adding the fixed version of the list adds to each column, while the non-fixed version adds to each row.</p>
+<p>Now, we sum the cumulative sums:</p>
+<pre><code>[[3 0 0 1 0 0 4]
+ [0 3 0 1 0 4 0]
+ [0 0 3 1 4 0 0]
+ [2 2 2 10 2 2 2]
+ [0 0 4 1 3 0 0]
+ [0 4 0 1 0 3 0]
+ [4 0 0 1 0 0 3]]
 </code></pre>
 <p>We’re going to index these numbers into a string to get each character, and that 10 is going to get in the way, so take the minimum of the results and 5:</p>
-<pre><code>3 0 0 1 0 0 4  
-0 3 0 1 0 4 0  
-0 0 3 1 4 0 0  
-2 2 2 5 2 2 2 
-0 0 4 1 3 0 0  
-0 4 0 1 0 3 0
-4 0 0 1 0 0 3
+<pre><code>[[3 0 0 1 0 0 4]
+ [0 3 0 1 0 4 0]
+ [0 0 3 1 4 0 0]
+ [2 2 2 5 2 2 2]
+ [0 0 4 1 3 0 0]
+ [0 4 0 1 0 3 0]
+ [4 0 0 1 0 0 3]]
 </code></pre>
 <p>Finally index these into a string so that 0 becomes a space, 1 becomes <code>|</code>, 2 becomes <code>-</code>, 3 becomes <code>\</code>, 4 becomes <code>/</code>, and 5 becomes <code>O</code>:</p>
 <pre><code>\  |  /
