--- a/q/272378.html
+++ b/q/272378.html
@@ -26,19 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>017</td><td>Wolfram Language Mathematica</td><td>240408T065759Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272404#272404">att</a></td></tr>
-<tr d-ix="1"><td>038</td><td>Charcoal</td><td>240406T152000Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272384#272384">Neil</a></td></tr>
-<tr d-ix="2"><td>040</td><td>Ruby</td><td>240408T090154Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272407#272407">G B</a></td></tr>
+<tr d-ix="0"><td>049</td><td>Ruby</td><td>240408T090154Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272407#272407">G B</a></td></tr>
+<tr d-ix="1"><td>017</td><td>Wolfram Language Mathematica</td><td>240408T065759Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272404#272404">att</a></td></tr>
+<tr d-ix="2"><td>038</td><td>Charcoal</td><td>240406T152000Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272384#272384">Neil</a></td></tr>
 <tr d-ix="3"><td>183</td><td>Python3</td><td>240407T171152Z</td><td><a href="https://codegolf.stackexchange.com/questions/272378/construct-the-point-with-two-segments/272394#272394">Ajax1234</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>28</s> <s>25</s> <s>22</s> 17 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 49 bytes</h1>
+
+<pre class="lang-ruby prettyprint-override"><code>-&gt;a,c,b{[x=3*a+b,0,a+=a-x*b+=b-1,c+=c,x,1,a,c-b]}
+</code></pre>
+<p><a href="https://tio.run/##TY7LCsIwFET3/Yq71GRS8lB38UdCkCS0KCiUihBp/faYVhQvs5gDB@aOj/gsvS3iGJAQJ5etYYFHSARug8gschuFQuI2IUOheiL6V3EN1XMKVKM9PmhAQoMOX1YStAftfgySf/rimoUb397CMM3rF/NAjvVu7b7tQjqf7tdL6jZ6W4ff" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Ruby port of Jonathan Allan's Python port of Neil's Charcoal solution.</p>
+<p>Fixed by using the new formula from Neil's answer.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>28</s> <s>25</s> <s>22</s> 17 bytes</h1>
 <pre><code>#2{0,1,I,1+I-I#}&amp;
 </code></pre>
 <p><a href="https://tio.run/##HYyxDoMgFEV3f4PExUcKaLs0NqwkHYwdjQOxSBmgiX0bwV@nynTPPTe5XuPHeI1u0XntMxGRAQcFvFFUkVTnYXMBJ9uvUpI7oQ8Lo7HuG1RAs/3MggdPTxfMRQ56Q1f6aJSXFsQ8z/X@WnTYYxXFeZqgijdoqSjUAeWsuRY@5jM4tE1XxBtYqlL@Aw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input <code>[b, a+c*I]</code> corresponding to the point <span class="math-container">\$\big(\frac ab,\frac cb\big)\$</span>. Output four complex numbers, grouping the first and last two into segments. For tuple output, append <code>/*ReIm</code> (+6 bytes).</p>
 <p>The segments <span class="math-container">\$\big((0,0),(1,0)\big)\$</span> and <span class="math-container">\$\big((0,1),(1,1-b)\big)\$</span> intersect at <span class="math-container">\$\big(\frac1b,0\big)\$</span>. We can then rotate-scale about the origin so that <span class="math-container">\$(1,0)\$</span> coincides with <span class="math-container">\$(a,c)\$</span>, and <span class="math-container">\$\big(\frac1b,0\big)\$</span> coincides with <span class="math-container">\$\big(\frac ab,\frac cb\big)\$</span>. This yields the segments <span class="math-container">\$\big((0,0),(a,c)\big)\$</span>, <span class="math-container">\$\big((-c,a),(a-c+bc, a+c-ab)\big)\$</span>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 38 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 38 bytes</h1>
 <pre><code>ＮθＮηＮζ≔⁺×³θζε≔⁻⊗θ×ε⊖⊗ζδＩ⟦ε⁰δ⊗ηε¹δ⊕⊗⁻ηζ
 </code></pre>
 <p><a href="https://tio.run/##ZY67DsIwDEV3viJjLKUStGMnRJcORR3YEEMfFomUpjQPhv58cCkIBJY83OtjX3eysd3Y6BhLcwv@GIYWLZ8g33xr@aNn0nvn1NXwWgfHT2pAxzPBJhBspsYPUClDRDGGVmPPF2ClUbACO4sDGk@DNzADlWA9HaitMp4fGuf5megtubTz4uSSItjuaZbm/9CaK5d/AC4AeYxJyjKWxuSuHw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Takes <code>(a/b,c/b)</code> as input as three integers <code>a, c, b</code>. Explanation:</p>
@@ -55,13 +63,6 @@
 </code></pre>
 <p>Output the lines <code>(3a+b,0)-(5a+b-6ab-2b²,2c);(3a+b,1)-(5a+b-6ab-2b²,2c-2b+1)</code>.</p>
 <p><a href="https://www.desmos.com/calculator/w1mikaltdg" rel="nofollow noreferrer">Verify on Desmos</a>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 40 bytes</h1>
-
-<pre class="lang-ruby prettyprint-override"><code>-&gt;a,c,b{[x=a+1,0,a-=x*b-=1,c,x,1,a,c-b]}
-</code></pre>
-<p><a href="https://tio.run/##dY7RCsIwDEXf/Yo8tjPRpm6KSP2RMqQbioKCKMJE/fbZZjoFsfShOenh3tOlurYb19IyYI3VzTcuDBkNBnJNVpHjiBtkjGuqykfrBxCPZ4R4bYndOEEgizB9z2wQCoS8nxFM970cHcLxdpe0@xF8tvHyLkfrUG9X5/2uXiurY5JKGRrGYAHcEkDFAKOBQJFsFkK4J0YPlPRIzvTl5B9nJruFMP5is@iRFE5i/hJp/jbTpyJ5CXGPbNQk9V9D89OQWD8B" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-<p>Ruby port of Jonathan Allan&quot;s Python port of Neil's Charcoal solution.</p>
 </div>
 <div id="pu3" class="pu"><h1>Python3, 183 bytes:</h1>
 <pre class="lang-py prettyprint-override"><code>lambda A,B,C:[*P(A/B,C/A,0),*P(A/B,C/A-B,A)]
