--- a/q/272452.html
+++ b/q/272452.html
@@ -26,19 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="0"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
 <tr d-ix="1"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 79 bytes</h1>
-<pre class="lang-javascript prettyprint-override"><code>n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
+<div id="pu0" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
+<pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
 `
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcHiNAXbpaUlaboWN_3zbO3y1NTSNPJ0DTW1NdJti23tMmw1UnQKbfP0UzRt7QpVDe3V1a2KtTNAgkAhnfQEt8yqqgQNY03t9ASnUhDTVLOmJk9TO4ErAWLsVq7k_Lzi_JxUvZz8dI00DUMDA01Na4jcggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWNwPTbPNs7fLU1NI08nQNNbU10m2Lbe0ybDVSdApt8_RTNG3tClUN7dXVrYq1M0CCQCGd9AS3zKqqBA1jTe30BKdSENNUs6YmT1M7gSsBYvBWruT8vOL8nFS9nPx0jTQNQwMDTU1riBzMcgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
 <pre><code>ƛ35fǑkF½*∑∴
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="noreferrer">Try it Online!</a></p>
 <p>Bitstring:</p>
 <pre><code>00000111010011110100011111010010001101011001000110010010101010001001010100
 </code></pre>
@@ -53,7 +53,7 @@
          ∑∴  # ‎⁢⁢      Sum that, and get the biggest of n and that
 💎
 </code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="noreferrer">Luminespire</a>.</p>
 </div>
 
 <table id="st">
