--- a/q/237895.html
+++ b/q/237895.html
@@ -53,7 +53,7 @@
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;Buffer(s).map(c=&gt;Math.random()&lt;n/l--/2?(n-=2,c-32):c,n=l=s.length)+''
 </code></pre>
-<p><a href="https://tio.run/##DcXBEoIgEADQf/Hi7ihoditXZ7r3EYQgNLg4QP0@9S7vrb4q6@TPIjhuplqqmZbHx1qTIKM81AmalqcqTibFWzwAZx6CEMO0Aguaei2uE950zxQoy2B4Lw67tq02JvA03v18Gcd/XYc6co7ByBB3sNCol96M3V2DWH8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##VVDLboMwELzzFVYu8QpwAr1BTKTcq34A4uAYG5yAHWGDKiG@nVISUnVPs6OZ2ceNDczyTj1cqE0pZklnS7NLL6XosAXSsgfmNPtkriYd06VpMZz0oQnDQ3zGOqRxwMOPGBIeaNpQSxqhK1eDv9/P3PTaIYrGKfWk6bCix1SdouNaqfJ9GD2ELJV4x668FLKqd5Au1GrMbUE3cN6AHyVR6k3eFv11vQnuCLNWVRqPU4AIIS9SaNcpYfGqBWJN5/DzIJzfAzQUgGiG8Ijye5GgAU0AsARraxpBGlO9jN7AGvs3aun6d@g/@fqjVmm8rPDrgQA9Kfb9pmD@AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>Basic idea: To Choose <span class="math-container">\$n\$</span> items from <span class="math-container">\$l\$</span> candidates, each item have <span class="math-container">\$\frac{n}{l}\$</span> probability to be chosen. And once the first item is chosen, we need to choose <span class="math-container">\$n-1\$</span> items from remaining <span class="math-container">\$l-1\$</span> candidates. If the first item is not chosen, we need to choose <span class="math-container">\$n\$</span> items from remaining <span class="math-container">\$l-1\$</span> candidates.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://scratch.mit.edu/" rel="nofollow noreferrer">Scratch</a>,452 bytes</h1>
