--- a/q/272452.html
+++ b/q/272452.html
@@ -26,12 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
-<tr d-ix="2"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
-<tr d-ix="3"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
+<tr d-ix="0"><td>087</td><td>sed E</td><td>240410T105512Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272470#272470">Philippo</a></td></tr>
+<tr d-ix="1"><td>026</td><td>05AB1E</td><td>240410T082537Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272466#272466">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>101</td><td>Python 3</td><td>240410T075442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272464#272464">Jitse</a></td></tr>
+<tr d-ix="3"><td>081</td><td>JavaScript</td><td>240410T012656Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272456#272456">Matthew </a></td></tr>
+<tr d-ix="4"><td>925</td><td>Vyxal j</td><td>240409T234210Z</td><td><a href="https://codegolf.stackexchange.com/questions/272452/fizzfizzfizzbuzz/272453#272453">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> <code>-E</code>, 87 bytes</h1>
+<p>This one takes empty lines as input for the number of lines to output. It outputs numbers as unary (if not Fizz or Buzz):</p>
+<pre><code>G
+h
+y/\n/x/
+:1
+s/(^|z)(x+)\2\2$/\1Fizz\2/
+t1
+:2
+s/(^|z)(x+)\2{4}$/\1Buzz\2/
+t2
+s/zx+/z/
+</code></pre>
+<p><a href="https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkifq8SQy8oIVUG1SS1IhVMpVAVIuqpCW79K//9/LjTwL7@gJDM/r/i/risA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
+<p>It could be optimised down to <a href="https://#%20%5Bsed%5D,%2081%20bytes%20%20%20%20%20%20G%20%20%20%20%20h%20%20%20%20%20y/%5Cn/x/%20%20%20%20%20:1%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%5C2$/%5C1Fizz%5C2/%20%20%20%20%20s/(%5E%7Cz)(x+)%5C2%7B4%7D$/%5C1Buzz%5C2/%20%20%20%20%20t1%20%20%20%20%20s/zx+/z/%20%20%5BTry%20it%20online!%5D%5BTIO-lutoydo7%5D%20%20%5Bsed%5D:%20https://www.gnu.org/software/sed/%20%5BTIO-lutoydo7%5D:%20https://tio.run/##K05N0U3PK/3/350rg6tSPyZPv0Kfy8qQq1hfI66mSlOjQlszxijGSEU/xtAts6oqxkgfVarapBYk51QKkSsB6ayq0Nav0v//n4sU8C@/oCQzP6/4v64rAA" rel="nofollow noreferrer" title="sed – Try It Online">81 bytes</a>, if <code>FizzBuzzFizz</code> would be allowed for 45 and the like.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>27</s> 26 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ENDÓ0Þ«2Lè”FizzÒÖ”#×JD?`þ,
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f1c/l8GSDw/MOrTbyObziUcNct8yqqsOTDk8DMpUPT/dysU84vE/n/38jAwMA" rel="nofollow noreferrer">Try it online.</a></p>
@@ -53,6 +70,7 @@
                        `    #  Pop and push its characters to the stack
                             #  (if the string was empty, it pops without pushing anything)
                         þ   #  Only leave the digits of the top item
+                            #  (&quot;z&quot; will become &quot;&quot;; numbers remain unchanged)
                          ,  #  Then pop and print it with trailing newline as well
 </code></pre>
 <p><a href="https://codegolf.stackexchange.com/a/166851/52210">See this 05AB1E tip of mine (section <em>How to use the dictionary?</em>)</a> to understand why <code>”FizzÒÖ”</code> is <code>&quot;Fizz Buzz&quot;</code>.</p>
@@ -63,7 +81,7 @@
 <li>The <code>END...D?`þ,</code> is to print the number if the <code>J</code> results in an empty string <code>&quot;&quot;</code> and print the string otherwise. An alternative that's 1 byte shorter would be <code>EN...N‚éθ,</code> or <code>END...‚éθ,</code>, but unfortunately those are limited to <span class="math-container">\$n\leq1001\$</span> and <span class="math-container">\$n\leq10001\$</span> respectively.</li>
 </ol>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 101 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:n and(f(n-1)or print(g(n,3)*'Fizz'+g(n,5)*'Buzz'or n))
 g=lambda i,d:0**(i%d)and-~g(i//d,d)
@@ -77,13 +95,13 @@ g=lambda i,d:0**(i%d)and-~g(i//d,d)
 </code></pre>
 <p><a href="https://tio.run/##LcyxCsIwEIDhvU9xi/QuRtpaXAJdHHwKl8iZeKDXEtqhHXz1mILjBz//tM6vUfschnt@@8@DPaiLqLYnU99k2@rjrkvRdSkaE2gVh38qll1rDMqBySufvhGladgy5bCXIArJa3xiZ89tR64CmJLoXJYQUInyDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.javascript.com" rel="nofollow noreferrer">JavaScript</a>, 81 bytes</h1>
 <pre class="lang-javascript prettyprint-override"><code>f=n=&gt;n&amp;&amp;f(n-1)+(g=s=&gt;h=(d,q=n/d)=&gt;q%1?'':s+h(d,q/d),g`Fizz`(3)+g`Buzz`(5)||n)+`
 `
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70kLz8ldcGCpaUlaboWNwPTbPNs7fLU1NI08nQNNbU10m2Lbe0ybDVSdApt8_RTNG3tClUN7dXVrYq1M0CCQCGd9AS3zKqqBA1jTe30BKdSENNUs6YmT1M7gSsBYvBWruT8vOL8nFS9nPx0jTQNQwMDTU1riBzMcgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="noreferrer">Vyxal</a> <code>j</code>, 74 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="noreferrer">bits<sup>v2</a></sup>, 9.25 bytes</h1>
 <pre><code>ƛ35fǑkF½*∑∴
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJqPSIsIiIsIsabMzVmx5FrRsK9KuKIkeKItCIsIiIsIjIwMCJd" rel="noreferrer">Try it Online!</a></p>
